# grasp-shaper

./: .gitignore  CMakeLists.txt  README.md  glayer1.ssv  glayer2.ssv  main.cpp  mlayer1.ssv  mlayer2.ssv  normalizers.ssv  wlayer1.ssv  wlayer2.ssv
nn-without-faulty-sensors/: glayer1.ssv  glayer2.ssv  wlayer2.ssv
nn-without-foam-1/: mlayer2.ssv
nn-without-foam-10/: glayer1.ssv  glayer2.ssv  mlayer1.ssv  mlayer2.ssv  wlayer1.ssv  wlayer2.ssv
nn-without-foam-100/: glayer1.ssv  glayer2.ssv  mlayer1.ssv  mlayer2.ssv  wlayer1.ssv  wlayer2.ssv
nn-without-foam-1000/: glayer1.ssv  glayer2.ssv  mlayer1.ssv  mlayer2.ssv  wlayer1.ssv  wlayer2.ssv
orig_nn/: glayer2.ssv  mlayer1.ssv
robot/: CMakeLists.txt  Grasper.cpp  Grasper.h  asynchronous_output.h  finger_position_output.h  fingertip_torque_output.h  force_torque_output.h  grasp_thread.h  object_recognizer.h  tactile_output.h
util/: utils.h
writeup/: README.txt  nn-results.txt  proposal.pdf.orig  proposal.tex
writeup/Analysis/: FindTimeIndex.m  GripGTestNorm.mat  GripGTrainNorm.mat  GripMTestNorm.mat  GripMTrainNorm.mat  GripMatrices.m  GripWTestNorm.mat  GripWTrainNorm.mat  LabelList.rtf  NewDataSetG.m  NewDataSetM.m  NewDataSetW.m  PlotDataScript.m  PressureMaps.m  ReadinLogFiles.m  Tloop.m  featureNormalize.m  normalizeAllData.m
writeup/TexFinalReport/: FinalReport.tex  abstract.tex  future.tex  introduction.tex  limitations.tex  methods.tex  neil-final-report.tex  references.bib  results.tex
writeup/TexProgressRep/: ProgressReport.tex  abstract.tex  future.tex  introduction.tex  methods.tex  (+1 more)
(+225 files in other folders)
